Added Navigation Bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <title>Fylo Landing Page</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="row">
+                <a href="./index.html" class="logo">
+                    <img src="./images/logo.svg" alt="fylo logo">
+                </a>
+                <nav class="navbar">
+                    <ul class="navbar-nav">
+                        <li class="nave-item"><a href="#" class="nav-link">Features</a></li>
+                        <li class="nave-item"><a href="#" class="nav-link">Team</a></li>
+                        <li class="nave-item"><a href="#" class="nav-link">Sign In</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
     <script src="./js/main.js"></script>
 </body>
