--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
         </div>
     </header>
 
+    <main>
+        <section class="hero">
+            <img src="./images/illustration-intro.png" alt="hero">
+            <div class="hero-text">
+                <h1>All your files in one secure location,<br>accessible anywhere.</h1>
+                <p>Fylo stores all your most important files in one secure location. <br> 
+                    Access them wherever you need, share and collaborate with <br>
+                    friends family, and co-workers.
+                </p>
+                <a href="#" role="link" class="hero-btn">Get Started</a>
+            </div>
+        </section>
+
+    </main>
+
     <script src="./js/main.js"></script>
 </body>
 </html>
