--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Style -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Fylo Landing Page</title>
 </head>
 <body>
+    <!-- Header Started -->
     <header>
         <div class="container">
             <div class="row">
@@ -24,8 +26,10 @@
             </div>
         </div>
     </header>
+    <!-- Header Ended -->
 
     <main>
+        <!-- Hero Section Started -->
         <section class="hero">
             <img src="./images/illustration-intro.png" alt="hero">
             <div class="hero-text">
@@ -37,9 +41,57 @@
                 <a href="#" role="link" class="hero-btn">Get Started</a>
             </div>
         </section>
+        <!-- Hero Section Ended -->
 
+        <!-- Features Section Started -->
+        <section class="features">
+            <div class="features-item">
+                <div class="item">
+                    <img src="./images/icon-access-anywhere.svg" alt="access file anywhere">
+                    <div class="feature-text">
+                        <h1>Access your files, anywhere</h1>
+                        <p>The ability to use a smartphone, tablet, or computer <br> 
+                            to access your account means your files follow <br> 
+                            you everywhere.
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./images/icon-security.svg" alt="security">
+                    <div class="feature-text">
+                        <h1>Security you can trust</h1>
+                        <p>2-factor authentication and user-controlled encryption are <br> 
+                            just a couple of the security features we allow to help <br> 
+                            secure your files.
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./images/icon-collaboration.svg" alt="collaboration">
+                    <div class="feature-text">
+                        <h1>Real-time collaboration</h1>
+                        <p>Securely share files and folders with friends, family and <br> 
+                            colleagues for live collaboration. No email attachments <br> 
+                            required.
+                        </p>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="./images/icon-any-file.svg" alt="any file">
+                    <div class="feature-text">
+                        <h1>Store any type of file</h1>
+                        <p>Whether you're sharing holidays photos or work <br> 
+                            documents, Fylo has you covered allowing for all file <br> 
+                            types to be securely stored and shared.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Features Section Ended -->
     </main>
 
+    <!-- JavaScript -->
     <script src="./js/main.js"></script>
 </body>
 </html>
