--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <img src="./images/illustration-intro.png" alt="hero">
             <div class="hero-text">
                 <h1>All your files in one secure location,<br>accessible anywhere.</h1>
-                <p>Fylo stores all your most important files in one secure location. <br> 
+                <p>
+                    Fylo stores all your most important files in one secure location. <br> 
                     Access them wherever you need, share and collaborate with <br>
                     friends family, and co-workers.
                 </p>
@@ -50,7 +51,8 @@
                     <img src="./images/icon-access-anywhere.svg" alt="access file anywhere">
                     <div class="feature-text">
                         <h1>Access your files, anywhere</h1>
-                        <p>The ability to use a smartphone, tablet, or computer <br> 
+                        <p>
+                            The ability to use a smartphone, tablet, or computer <br> 
                             to access your account means your files follow <br> 
                             you everywhere.
                         </p>
@@ -60,7 +62,8 @@
                     <img src="./images/icon-security.svg" alt="security">
                     <div class="feature-text">
                         <h1>Security you can trust</h1>
-                        <p>2-factor authentication and user-controlled encryption are <br> 
+                        <p>
+                            2-factor authentication and user-controlled encryption are <br> 
                             just a couple of the security features we allow to help <br> 
                             secure your files.
                         </p>
@@ -70,7 +73,8 @@
                     <img src="./images/icon-collaboration.svg" alt="collaboration">
                     <div class="feature-text">
                         <h1>Real-time collaboration</h1>
-                        <p>Securely share files and folders with friends, family and <br> 
+                        <p>
+                            Securely share files and folders with friends, family and <br> 
                             colleagues for live collaboration. No email attachments <br> 
                             required.
                         </p>
@@ -80,7 +84,8 @@
                     <img src="./images/icon-any-file.svg" alt="any file">
                     <div class="feature-text">
                         <h1>Store any type of file</h1>
-                        <p>Whether you're sharing holidays photos or work <br> 
+                        <p>
+                            Whether you're sharing holidays photos or work <br> 
                             documents, Fylo has you covered allowing for all file <br> 
                             types to be securely stored and shared.
                         </p>
@@ -89,6 +94,22 @@
             </div>
         </section>
         <!-- Features Section Ended -->
+
+        <section class="stay-productive">
+            <img src="./images/illustration-stay-productive.png" alt="stay productive">
+            <div class="productive-text">
+                <h1>Stay productive, <br> wherever you are</h1>
+                <p>
+                    Never let location be an issue when accessing your files. Fylo has you <br> 
+                    covered for all of your file storage needs.
+                </p>
+                <p>
+                    Securely share files and folders with friends, family and colleagues for live <br> 
+                    collaboration. No email attachments required.
+                </p>
+                <a href="#" role="link" class="productive-btn">See how Fylo works </a>
+            </div>
+        </section>
     </main>
 
     <!-- JavaScript -->
