Added Testimonials Section

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         </section>
         <!-- Features Section Ended -->
 
+        <!-- Stay Productive Section Started -->
         <section class="stay-productive">
             <img src="./images/illustration-stay-productive.png" alt="stay productive">
             <div class="productive-text">
@@ -110,6 +111,57 @@
                 <a href="#" role="link" class="productive-btn">See how Fylo works </a>
             </div>
         </section>
+        <!-- Stay Productive Section Ended -->
+
+        <!-- Testimonials Section Started -->
+        <section class="testimonials">
+            <img src="./images/bg-quotes.png" alt="testimonials">
+            <div class="testimonials-items">
+                <div class="testimonials-box">
+                    <p>
+                        Fylo has improved our team productivity by an order of magnitude. 
+                        Since making the switch our team has 
+                        become a well-oiled collaboration machine.
+                    </p>
+                    <div class="testimonials-person">
+                        <img src="./images/profile-1.jpg" alt="Profile">
+                        <div>
+                            <p>Satish Patel</p>
+                            <p>Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonials-box">
+                    <p>
+                        Fylo has improved our team productivity by an order of magnitude. 
+                        Since making the switch our team has 
+                        become a well-oiled collaboration machine.
+                    </p>
+                    <div class="testimonials-person">
+                        <img src="./images/profile-2.jpg" alt="Profile">
+                        <div>
+                            <p>Bruce McKenzie</p>
+                            <p>Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonials-box">
+                    <p>
+                        Fylo has improved our team productivity by an order of magnitude. 
+                        Since making the switch our team has 
+                        become a well-oiled collaboration machine.
+                    </p>
+                    <div class="testimonials-person">
+                        <img src="./images/profile-3.jpg" alt="Profile">
+                        <div>
+                            <p>Iva Boyd</p>
+                            <p>Founder & CEO, Huddle</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Testimonials Section Ended -->
     </main>
 
     <!-- JavaScript -->
