Added Call To Action Section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,26 @@
             </div>
         </section>
         <!-- Testimonials Section Ended -->
+
+        <!-- Call to Action Section Started -->
+            <section class="cta">
+                <div class="cta-container">
+                    <h1>Get early access today</h1>
+                    <p>
+                        It only takes a minute to sign up and our free starter tier is extremely generous. 
+                        If you have any <br> questions, our support team would be happy to help you.
+                    </p>
+                    <form class="cta-form">
+                        <input type="email" name="email" class="cta-email" placeholder="email@example.com">
+                        <button type="button" class="cta-btn">Get Started For Free</button>
+                    </form>
+                    <span class="cta-msg"></span>
+                </div>
+            </section>
+        <!-- Call to Action Section Ended -->
     </main>
+
+    <footer></footer>
 
     <!-- JavaScript -->
     <script src="./js/main.js"></script>
