--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Fylo Landing Page</title>
 </head>
 <body>
@@ -18,9 +20,9 @@
                 </a>
                 <nav class="navbar">
                     <ul class="navbar-nav">
-                        <li class="nave-item"><a href="#" class="nav-link">Features</a></li>
-                        <li class="nave-item"><a href="#" class="nav-link">Team</a></li>
-                        <li class="nave-item"><a href="#" class="nav-link">Sign In</a></li>
+                        <li><a href="#" class="nav-link">Features</a></li>
+                        <li><a href="#" class="nav-link">Team</a></li>
+                        <li><a href="#" class="nav-link">Sign In</a></li>
                     </ul>
                 </nav>
             </div>
@@ -181,7 +183,70 @@
         <!-- Call to Action Section Ended -->
     </main>
 
-    <footer></footer>
+    <!-- Footer Started -->
+    <footer>
+        <div class="footer-content">
+            <a href="./index.html" class="logo">
+                <img src="./images/logo.svg" alt="fylo logo">
+            </a>
+            <div class="footer-link">
+                <div class="contact-us">
+                    <div class="location">
+                        <a href="#">
+                            <img src="./images/icon-location.svg" alt="location icon">
+                            Lorem ipsum dolor sit amet, consectetur <br>
+                            adipiscing elit, sed do eiusmod tempor <br>
+                            incididunt ut labore et dolore magna aliqua
+                        </a>
+                    </div>
+                    <div>
+                        <ul>
+                            <li class="mb-1"><img src="./images/icon-phone.svg" alt="phone icon">
+                                <a href="tel:+15431234567" class="link-hover-style-1 ltr-text">+1-543-123-4567</a>
+                            </li>
+                            <li class="mb-1"><img src="./images/icon-email.svg" alt="email icon">
+                                <a href="mailto:example@fylo.com" class="link-hover-style-1">example@fylo.com</a></p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                
+                <div class="usefull-link">
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Jobs</a></li>
+                        <li><a href="#">Press</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Privacy</a></li>
+                    </ul>
+                </div>
+
+                <div class="social-media">
+                    <ul class="navbar-nav">
+                        <li>
+                            <a href="#" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank" title="Twitter">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" target="_blank" title="Linkedin"><i class="fab fa-instagram"></i>
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </div> 
+    </footer>
+    <!-- Footer Started -->
 
     <!-- JavaScript -->
     <script src="./js/main.js"></script>
